Manually fix ERB linting errors
Also mainly omitting Hash literals and keyword arguments

--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -9,7 +9,7 @@
   <%= govuk_link_to(
         url,
         rel: "next",
-        remote: remote,
+        remote:,
         class: "moj-pagination__link",
       ) do %>
     Next<span class="govuk-visually-hidden"> page</span>
