--- a/app/views/kaminari/_page.html.erb
+++ b/app/views/kaminari/_page.html.erb
@@ -12,7 +12,7 @@
       page,
       url,
       rel: page.rel,
-      remote: remote,
+      remote:,
       class: "moj-pagination__link",
     ) %>
 </li>
