--- a/app/views/publish/courses/_course_length_field.html.erb
+++ b/app/views/publish/courses/_course_length_field.html.erb
@@ -14,6 +14,6 @@
       label: { text: "Up to 2 years" },
       data: { qa: "course_course_length_twoyears" }) %>
 
-    <%= render partial: "publish/courses/other_course_length_field", locals: { f: f, course_object: @source_course ? source_course : @course } %>
+    <%= render partial: "publish/courses/other_course_length_field", locals: { f:, course_object: @source_course ? source_course : @course } %>
 
 <% end %>
