--- a/app/views/publish/courses/accredited_body/new.html.erb
+++ b/app/views/publish/courses/accredited_body/new.html.erb
@@ -21,7 +21,7 @@
                     ),
                     method: :get do |form| %>
 
-          <%= render "publish/courses/new_fields_holder", form: form, except_keys: [:accredited_body_code] do |fields| %>
+          <%= render "publish/courses/new_fields_holder", form:, except_keys: [:accredited_body_code] do |fields| %>
             <div class="govuk-radios" data-module="govuk-radios" data-qa="course__accredited_body">
               <% if @provider.accredited_bodies.length > 0 %>
                 <%= render partial: "provider_suggestion", collection: @provider.accredited_bodies, locals: { form: fields } %>
