--- a/app/views/publish/courses/apprenticeship/edit.html.erb
+++ b/app/views/publish/courses/apprenticeship/edit.html.erb
@@ -12,7 +12,7 @@
                   url: apprenticeship_provider_recruitment_cycle_course_path(@course.provider_code, @course.recruitment_cycle_year, @course.course_code),
                   method: :put do |form| %>
 
-      <%= render "form_fields", form: form %>
+      <%= render "form_fields", form: %>
 
       <%= form.submit course.is_running? ? "Save and publish changes" : "Save",
         class: "govuk-button", data: { qa: "course__save" } %>
