--- a/app/views/publish/courses/index.html.erb
+++ b/app/views/publish/courses/index.html.erb
@@ -25,6 +25,6 @@
       <%= accrediting_provider %>
     </h2>
 
-    <%= render partial: "course_table", locals: { courses: courses } %>
+    <%= render partial: "course_table", locals: { courses: } %>
   </section>
 <% end %>
