--- a/app/views/publish/courses/outcome/_form_fields.html.erb
+++ b/app/views/publish/courses/outcome/_form_fields.html.erb
@@ -8,8 +8,8 @@
 <% end %>
 
 <%= render "publish/shared/edit_options_radio_buttons",
-           form: form,
-           legend: legend,
+           form:,
+           legend:,
            key: "qualifications",
            field: :qualification,
            bold_labels: true %>
