--- a/app/views/publish/courses/preview/_entry_requirements_qualifications.html.erb
+++ b/app/views/publish/courses/preview/_entry_requirements_qualifications.html.erb
@@ -2,8 +2,8 @@
   <h2 class="govuk-heading-l" id="section-entry">Entry Requirements</h2>
   <h3 class="govuk-heading-m">Qualifications needed</h3>
 
-  <%= render DegreePreviewComponent::View.new(course: course) %>
-  <%= render GcsePreviewComponent::View.new(course: course) %>
+  <%= render DegreePreviewComponent::View.new(course:) %>
+  <%= render GcsePreviewComponent::View.new(course:) %>
 
   <% if course.personal_qualities.present? %>
     <h3 class="govuk-heading-m">Personal qualities</h3>
