--- a/app/views/publish/courses/salary/edit.html.erb
+++ b/app/views/publish/courses/salary/edit.html.erb
@@ -22,7 +22,7 @@
         <%= page_title %>
       </h1>
 
-      <%= render partial: "publish/courses/course_length_field", locals: { f: f, form_object: @course_salary_form } %>
+      <%= render partial: "publish/courses/course_length_field", locals: { f:, form_object: @course_salary_form } %>
 
       <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
 
