--- a/app/views/publish/courses/show.html.erb
+++ b/app/views/publish/courses/show.html.erb
@@ -16,7 +16,7 @@
                 provider_code: @provider.provider_code,
                 course: @course,
                 field: id,
-                message: message,
+                message:,
               ) %>"><%= message %></a>
             </li>
           <% end %>
