--- a/app/views/publish/courses/study_mode/_form_fields.html.erb
+++ b/app/views/publish/courses/study_mode/_form_fields.html.erb
@@ -15,7 +15,7 @@
                   class: "govuk-radios__input" %>
           <%= form.label :study_mode,
                   t("edit_options.study_modes.#{value}.label"),
-                  value: value,
+                  value:,
                   class: "govuk-label govuk-radios__label" %>
         </div>
       <% end %>
