--- a/app/views/publish/shared/_edit_options_radio_buttons.html.erb
+++ b/app/views/publish/shared/_edit_options_radio_buttons.html.erb
@@ -18,7 +18,7 @@
             } %>
           <%= form.label field,
             label,
-            value: value,
+            value:,
             class: "govuk-label govuk-radios__label #{'govuk-!-font-weight-bold' if bold_labels}" %>
           <span id="<%= "#{field}-#{value}-help" %>" class="govuk-hint govuk-radios__hint">
             <%= help %>
