--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -9,7 +9,7 @@
   <%= govuk_link_to(
         url,
         rel: "prev",
-        remote: remote,
+        remote:,
         class: "moj-pagination__link",
       ) do %>
     Previous<span class="govuk-visually-hidden"> page</span>
