--- a/app/views/publish/courses/accredited_body/search_new.html.erb
+++ b/app/views/publish/courses/accredited_body/search_new.html.erb
@@ -18,7 +18,7 @@
                   method: :get do |form| %>
 
       <%= render "publish/shared/course_creation_hidden_fields",
-        form: form,
+        form:,
         course_creation_params: @course_creation_params,
         except_keys: [:accredited_body_code] %>
 
@@ -26,7 +26,7 @@
         <p class="govuk-body">We found these providers which matched your search:</p>
 
         <div class="govuk-radios" data-module="govuk-radios" data-qa="course__accredited_body">
-          <%= render partial: "provider_suggestion", collection: @provider_suggestions, locals: { form: form } %>
+          <%= render partial: "provider_suggestion", collection: @provider_suggestions, locals: { form: } %>
           <div class="govuk-radios__divider">or</div>
 
           <div class="govuk-radios__item">
@@ -42,7 +42,7 @@
           </div>
 
           <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="other-container">
-            <%= render "provider_search_field", form: form %>
+            <%= render "provider_search_field", form: %>
           </div>
         </div>
       <% else %>
@@ -51,7 +51,7 @@
         <p class="govuk-body">Try another search:</p>
 
         <%= form.hidden_field :accredited_body_code, value: :other %>
-        <%= render "provider_search_field", form: form %>
+        <%= render "provider_search_field", form: %>
       <% end %>
 
       <%= form.submit course.is_running? ? "Save and publish changes" : "Save",
