--- a/app/views/publish/courses/applications_open/new.html.erb
+++ b/app/views/publish/courses/applications_open/new.html.erb
@@ -14,7 +14,7 @@
                   ),
                   method: :get do |form| %>
 
-      <%= render "publish/courses/new_fields_holder", form: form, except_keys: %i[applications_open_from month day year] do |fields| %>
+      <%= render "publish/courses/new_fields_holder", form:, except_keys: %i[applications_open_from month day year] do |fields| %>
         <%= render "form_fields", form: fields %>
       <% end %>
     <% end %>
