--- a/app/views/publish/courses/apprenticeship/new.html.erb
+++ b/app/views/publish/courses/apprenticeship/new.html.erb
@@ -14,7 +14,7 @@
                   ),
                   method: :get do |form| %>
 
-      <%= render "publish/courses/new_fields_holder", form: form, except_keys: [:program_type] do |fields| %>
+      <%= render "publish/courses/new_fields_holder", form:, except_keys: [:program_type] do |fields| %>
         <%= render "form_fields", form: fields, gcse_subjects_required: course.gcse_subjects_required %>
       <% end %>
     <% end %>
