--- a/app/views/publish/recruitment_cycles/_provider_info.html.erb
+++ b/app/views/publish/recruitment_cycles/_provider_info.html.erb
@@ -1,9 +1,9 @@
-<%= render partial: "publish/recruitment_cycles/about_organisation", locals: { provider: provider, year: year } %>
-<%= render partial: "publish/recruitment_cycles/locations_info", locals: { provider: provider, year: year } %>
-<%= render partial: "publish/recruitment_cycles/courses_info", locals: { provider: provider, year: year } %>
-<%= render partial: "publish/recruitment_cycles/courses_accredited_body", locals: { provider: provider, year: year } %>
+<%= render partial: "publish/recruitment_cycles/about_organisation", locals: { provider:, year: } %>
+<%= render partial: "publish/recruitment_cycles/locations_info", locals: { provider:, year: } %>
+<%= render partial: "publish/recruitment_cycles/courses_info", locals: { provider:, year: } %>
+<%= render partial: "publish/recruitment_cycles/courses_accredited_body", locals: { provider:, year: } %>
 
 <!-- Remove this once the current cycle is set to 2023 -->
 <% if recruitment_cycle.current? %>
-  <%= render partial: "publish/recruitment_cycles/allocations", locals: { provider: provider, year: year } %>
+  <%= render partial: "publish/recruitment_cycles/allocations", locals: { provider:, year: } %>
 <% end %>
