Restyle org list to match recruitment cycle change page

--- a/app/views/publish/providers/_provider.html.erb
+++ b/app/views/publish/providers/_provider.html.erb
@@ -1,5 +1,5 @@
-<li>
-  <h2 class="govuk-heading-m">
+<ul class="govuk-list govuk-list--spaced">
+  <li>
     <%= govuk_link_to provider.provider_name, publish_provider_path(provider.provider_code) %>
-  </h2>
-</li>
+  </li>
+</ul>
